<resources>
    <string name="app_name">RemindMed</string>
    <string name="title_home">Home Page</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="medication_info">Medication</string>
    <string name="add_medication">Add Medication</string>
    <string name="medication_name">Medication Name</string>
    <string name="pill_count">Pill Count</string>
    <string name="medication_dosage">Dosage</string>
    <string name="refill_count">Refill Count</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="medication_number">Medication Number</string>
    <string name="sort_alphabetically">A->Z</string>
    <string name="sort_alphabetically_reverse">Z->A</string>
    <string name="sort_whenCreated">When Created</string>
    <string name="sort_pillCount">Pill count from lowest to highest</string>
    <string name="sort_dosage">Dosage from lowest to strongest</string>
    <string name="sort_reffilCount">Refill Count from lowest to highest</string>
    <string name="register">register here</string>
    <string name="minbefmeal30">30 minutes before meal</string>
    <string name="hmtiad">How many times in a day</string>
    <string name="beforafter">Before or After Meal</string>
    <string name="basics">Basics</string>
    <string name="meditype">Medicine Type</string>
    <string name="gas_amp_gas_pains"><![CDATA[Gas & gas pains]]></string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logout">logout</string>
    <string name="log_out">Log out</string>
    <string name="send_request">Send Request</string>
    <string name="back_to_log_in">Back To Log In</string>
    <string name="note_2">Enter your email and we\'ll send you a link to get back into your account</string>
    <string name="note_1">Trouble logging in?</string>
    <string name="hyperlink">Enter your email address and password. Learn more about Password Standard at\n<a href="https://www.csulb.edu/information-technology/information-security/information-security/password-standard">https://www.csulb.edu</a></string>
    <string name="create_account">Create Account</string>
    <string name="setting">Setting</string>
    <string name="title_Medication">Medication</string>
    <string name="checkbox">CheckBox</string>
    <string name="remember_me">Remember me</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>

    <string name="closeNavDrawer">Navigation Drawer CLose</string>
    <string name="app">APP</string>
    <string name="your_personal_medical_assistant">Your Personal Medical Assistant</string>
    <string name="image">image</string>
    <string name="save">SAVE</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="before_meal">Before Meal</string>
    <string name="after_meal">After Meal</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="start_date">Start Date</string>
    <string name="add_picture">Add Picture</string>
    <string name="how_many_times_a_day">How many times a day</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6_hour">6 hour</string>
    <string name="_4_hour">4 hour</string>
    <string name="_2_hour">2 hour</string>
    <string name="in_every">Duration</string>
    <string name="_22_sep_2021">22 Sep, 2021</string>
    <string name="end_date">End Date</string>
    <string name="_10_00pm">10:00pm</string>
    <string name="_02_30pm">02:30pm</string>
    <string name="_08_30am">08:30am</string>
    <string name="injection">INJECTION</string>
    <string name="drops">DROPS</string>
    <string name="capsule">CAPSULE</string>
    <string name="categories">Categories</string>
    <string name="tablet">TABLET</string>
    <string name="total_medicine">Total Medicine</string>
    <string name="reminder">Reminder</string>
    <string name="title_Reminder">Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="select_medication">Select Medication</string>
    <string name="reminder_name">Reminder Name</string>

    <string name="RemindMed">RemindMed</string>
    <string name="Medications">Medications</string>
    <string name="Notifications">Notifications</string>
    <string name="Reminders">Reminders</string>
    <string name="Map">Map</string>
    <string name="remind_link">We Glad You Stay! \n Please beware that your current data will be lost after linking process.</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>

    <string name="google_map_key">AIzaSyD7w9xXLFcDgB10Ba65oSWCCAGuFBZNrgU</string>
    <string name="privacy">Before signing in make sure you agree to our Terms and Conditions and Privacy Policy.</string>
    <string name="terms_text">By signing up you agree to our Terms of Use, Privacy Policy and Rules.</string>
    <string name="showing_nearby_hospital">Showing Nearby Hospital</string>
    <string name="showing_nearby_pharmacy">Showing Nearby Pharmacy</string>
    <string name="desc_a">A tablet is a pharmaceutical oral dosage form or solid unit dosage form.</string>
    <string name="desc_b">Drug-embedded empty capsule shells — A new class of capsule has been developed whereby drugs can be embedded in the capsule shell matrix.</string>
    <string name="desc_c">Eyes drops sometimes do not have medications in them and are only lubricating and tear-replacing solutions.</string>
    <string name="desc_d">An injection is the act of administering a liquid, especially a drug, into a person\'s body using a needle (usually a hypodermic needle) and a syringe.</string>

    />

</resources>