<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_sortMedicineName"
        android:title="@string/sort_alphabetically" />
    <item
        android:id="@+id/menu_sortMedicineNameReverse"
        android:title="@string/sort_alphabetically_reverse" />
    <item
        android:id="@+id/menu_sortWhenCreated"
        android:title="@string/sort_whenCreated" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
</menu>