<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.resetPasswordActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/stroke_box"
        android:backgroundTint="@color/gainsboro"
        android:ellipsize="end"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/send_request"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/send_request" />

    <View
        android:id="@+id/line1"
        android:layout_width="300dp"
        android:layout_height="1dip"
        android:layout_below="@+id/send_request"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@color/gainsboro" />

    <Button
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:onClick="goBack"
        android:text="@string/back_to_log_in"
        android:textColor="@color/colorPrimary"
        android:textSize="11sp"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/note_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/note_1">

    </TextView>

    <TextView
        android:id="@+id/note_2"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/note_2">

    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="88dp"
        android:layout_height="91dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@android:drawable/ic_lock_lock" />


</RelativeLayout>